--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,17 @@ body {
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: rgb(248, 248, 245);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+/******* Color Theme *******/
+.main-color-theme {
+  /* --brown: rgb(248, 248, 245); */
 }
 
 /******* Flex Box *******/
