--- a/src/components/css/SideHoverbar.css
+++ b/src/components/css/SideHoverbar.css
@@ -1,5 +1,5 @@
 .sb-container {
-  background-color: blue;
+  background-color: var(--light-green);
   position: fixed;
   top: 50vh;
   width: fit-content;
