--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,9 @@ code {
 
 /******* Color Theme *******/
 .main-color-theme {
-  /* --brown: rgb(248, 248, 245); */
+  --light-green: rgb(94, 201, 201);
+  --dark-green: rgb(21, 153, 154);
+  --darkest-green: rgb(12, 55, 55);
 }
 
 /******* Flex Box *******/
