--- a/src/components/css/SideHoverbar.css
+++ b/src/components/css/SideHoverbar.css
@@ -1,10 +1,19 @@
 .sb-container {
   background-color: var(--light-green);
   position: fixed;
-  top: 50vh;
-  width: fit-content;
+  top: 7vh;
+  width: 5em;
+  height: 45em;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  color: white;
 }
 
 .sb-icon {
   color: var(--darkest-green);
+  /* font-size: 25px; */
+  font-size: 2.3em;
 }
