--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   background-color: rgb(248, 248, 245);
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  color: #474340;
+  font-size: 0.9em;
+  line-height: 1.4;
 }
 
 code {
