--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ code {
 
 /******* Color Theme *******/
 .main-color-theme {
+  --cream-white: rgb(248, 248, 245);
   --light-green: rgb(94, 201, 201);
   --dark-green: rgb(21, 153, 154);
   --darkest-green: rgb(12, 55, 55);
