--- a/src/components/css/SideHoverbar.css
+++ b/src/components/css/SideHoverbar.css
@@ -11,7 +11,10 @@
 
   text-align: center;
   color: var(--cream-white);
-  transition: 0.2s;
+}
+
+.sb-container * {
+  cursor: pointer;
 }
 
 .sb-icon {
@@ -20,7 +23,7 @@
   cursor: pointer;
 }
 
-.sb-icon:hover {
+.sb-item-container:hover .sb-icon {
   color: var(--card-white);
 }
 
