--- a/src/index.css
+++ b/src/index.css
@@ -28,11 +28,24 @@ code {
 
 /* Move elements right when hover side bar is active. Get rid of margin when sidebar disappears. */
 .left-screen-margin {
-  margin-left: 5.5em;
+  margin-left: 7.5em;
 }
 @media (max-width: 900px) {
   .left-screen-margin {
     margin-left: 0;
+  }
+}
+
+/* Puts margin around div and edge of screen. */
+/* Add additional left margin if left sidebar is active */
+.edge-screen-margin {
+  margin: 1em;
+  margin-left: 7.5em;
+}
+@media (max-width: 900px) {
+  .edge-screen-margin {
+    margin: 1em;
+    margin-left: 1em;
   }
 }
 
