--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
 .image-container {
   height: 750px;
+  /* margin-bottom: -20em; */
+}
+
+@media (max-width: 750px) {
+  .image-container {
+    margin-bottom: -10em;
+  }
+}
+
+@media (max-width: 600px) {
+  .image-container {
+    margin-bottom: -20em;
+  }
 }
 
 .image-container img {
