--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -1,10 +1,10 @@
 .card-container {
-  background-color: red;
+  background-color: gray;
   border: 1px solid yellow;
   width: fill;
 }
 
 .card-img {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
 }
