--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -1,10 +1,12 @@
 .card-container {
-  background-color: gray;
-  border: 1px solid yellow;
+  background-color: var(--dark-green);
+  /* border: 1px solid yellow; */
+  margin: 0.3em;
   width: fill;
 }
 
 .card-img {
-  width: 200px;
-  height: 200px;
+  max-height: 100%;
+  max-width: 100%;
+  width: stretch;
 }
