--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -1,6 +1,7 @@
 .card-container {
   background-color: var(--dark-green);
-  /* border: 1px solid yellow; */
+  color: var(--cream-white);
+  font-size: 19px;
   margin: 0.3em;
   width: fill;
 }
