Make ServiceCenter.js rely on shared CSS classes instead of its own classes

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,10 @@ code {
   justify-content: space-between;
 }
 
+.space-even {
+  justify-content: space-evenly;
+}
+
 .text-center {
   text-align: center;
 }
