--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,10 @@ code {
   justify-content: space-evenly;
 }
 
+.space-center {
+  justify-content: center;
+}
+
 .text-center {
   text-align: center;
 }
